test/ref.ruse
func main() int {
    var a int
    &&a // error
    *a
}
